SERVER-35179 Make NiTL actually refresh