src/mongo/executor/connection_pool_tl.cpp
@@ -68,7 +68,6 @@ void TLTimer::cancelTimeout() {
 
 void TLConnection::indicateSuccess() {
     _status = Status::OK();
-    _lastUsed = _reactor->now();
 }
 
 void TLConnection::indicateFailure(Status status) {
