src/mongo/executor/network_interface_tl.cpp
@@ -343,6 +343,7 @@ Future<RemoteCommandResponse> NetworkInterfaceTL::_onAcquireConn(
             } else if (!swr.getValue().isOK()) {
                 state->conn->indicateFailure(swr.getValue().status);
             } else {
+                state->conn->indicateUsed();
                 state->conn->indicateSuccess();
             }
 
